:bug: Fixing dark mode links

--- a/_scss/mode.dark.scss
+++ b/_scss/mode.dark.scss
@@ -11,6 +11,10 @@
 
 	a {
 		color: $DARK_Link;
+
+		&:active, &:focus, &:hover {
+			color: $DARK_Link;
+		}
 	}
 
 	h1 {
